# ji-auto-hc

./: .gitignore  README.md  __main__.py  requirements.txt  sample.json  setup.cfg  setup.py  students.csv  template.tex
jiautohc/: __init__.py  __main__.py
template/: template.tex
