[metadata]
name = jiautohc
author = tc-imba
author-email = liuyh615@sjtu.edu.cn
summary = A tool automatically sending someone to JI Honor Council
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
project_urls =
    Source Code = https://github.com/tc-imba/ji-auto-hc
license = Apache-2
keywords =
    tex

[files]
packages =
    jiautohc

[entry_points]
console_scripts =
    jiautohc = jiautohc:main

